--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "jingfm-cli",
   "version": "0.0.2",
   "description": "jingfm player in command line",
-  "bin":"jingfm",
+  "bin": "jingfm",
   "repository": "git@github.com:fraserxu/jingfm-cli.git",
   "dependencies": {
     "request": "~2.21.0",
     "commander": "~1.2.0",
-    "q": "~0.9.6"
+    "q": "~0.9.6",
+    "cli-color": "~0.2.2"
   },
   "devDependencies": {},
   "keywords": [
